# gl

./: .gitignore  CMakeLists.txt
Dependencies/GLEW/: INSTALL_RECEIPT.json
Dependencies/GLEW/lib/cmake/glew/: glew-targets.cmake
src/: main.cpp
